Support unique constraint validation by client in separate transaction